Mon Oct  8 16:54:11 UTC 2012  Huang-Ming Huang  <huangh@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/Qos_Helper.h:
        * dds/DCPS/Qos_Helper.inl:
        * dds/DCPS/RawDataSample.h:
        * dds/DCPS/Recorder.h:
        * dds/DCPS/RecorderImpl.h:
        * dds/DCPS/RecorderImpl.cpp:
        * dds/DCPS/Replayer.h:
        * dds/DCPS/ReplayerImpl.h:
        * dds/DCPS/ReplayerImpl.cpp:
        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/WriterInfo.h:
        * dds/DCPS/WriterInfo.cpp:

        * tests/DCPS/RecorderReplayer/Messenger_export.h:
        * tests/DCPS/RecorderReplayer/Publisher.cpp:
        * tests/DCPS/RecorderReplayer/RecorderReplayer.mpc:
        * tests/DCPS/RecorderReplayer/Relay.cpp:
        * tests/DCPS/RecorderReplayer/Subscriber.cpp:
        
          Remove fuzz errors and fix problems in
          static/DDS_HAS_MINIMUM_BIT builds.

Fri Oct  5 19:25:02 UTC 2012  Huang-Ming Huang  <huangh@ociweb.com>

        * bin/dcps_tests.lst:

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.inl:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/Qos_Helper.h:
        * dds/DCPS/Qos_Helper.inl:
        * dds/DCPS/RawDataSample.h:
        * dds/DCPS/RawDataSample.cpp:
        * dds/DCPS/Recorder.h:
        * dds/DCPS/Recorder.cpp:
        * dds/DCPS/RecorderImpl.h:
        * dds/DCPS/RecorderImpl.cpp:
        * dds/DCPS/Replayer.h:
        * dds/DCPS/Replayer.cpp:
        * dds/DCPS/ReplayerImpl.h:
        * dds/DCPS/ReplayerImpl.cpp:
        * dds/DCPS/Service_Participant.h: